--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <img src="./images/illustration-devices.svg" class="ill-device">
    </div>
   </div>
+  <div class="blur hidden"></div>
 <script src="index.js"></script>
 </body>
 </html>
